--- a/src/main/webapp/app/home/home.scss
+++ b/src/main/webapp/app/home/home.scss
@@ -6,7 +6,9 @@ Main page styles
     display: inline-block;
     width: 347px;
     height: 497px;
-    background: url('../../content/images/hipster.png') no-repeat center top;
+    // Changed by Hadi
+    // background: url('../../content/images/hipster.png') no-repeat center top;
+    background: url('../../content/images/planty.png') no-repeat center top;
     background-size: contain;
 }
 
