--- a/src/main/webapp/app/layouts/navbar/navbar.scss
+++ b/src/main/webapp/app/layouts/navbar/navbar.scss
@@ -71,7 +71,9 @@ Logo styles
             width: 70px;
             display: inline-block;
             vertical-align: middle;
-            background: url('../../../content/images/logo-jhipster.png') no-repeat center center;
+            // Changed by Hadi
+            // background: url('../../../content/images/logo-jhipster.png') no-repeat center center;
+            background: url('../../../content/images/logo-planty.png') no-repeat center center;
             background-size: contain;
         }
     }
