--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -25,7 +25,10 @@
             -->
         </div>
 
-        <p jhiTranslate="home.question">
+
+        <!-- Commented by Hadi -->
+        <!-- 
+	<p jhiTranslate="home.question">
             If you have any question on JHipster:
         </p>
 
@@ -40,5 +43,6 @@
         <p>
             <span jhiTranslate="home.like">If you like JHipster, don't forget to give us a star on</span> <a href="https://github.com/jhipster/generator-jhipster" target="_blank" rel="noopener" jhiTranslate="home.github">GitHub</a>!
         </p>
+	-->
     </div>
 </div>
