--- a/src/main/webapp/app/entities/pairing-request/pairing-request.component.html
+++ b/src/main/webapp/app/entities/pairing-request/pairing-request.component.html
@@ -1,9 +1,9 @@
 <div>
     <h2 id="page-heading">
-        <span jhiTranslate="assistantManagerApp.pairingRequest.home.title">Pairing Requests</span>
+        <span jhiTranslate="plantyAssistantManagerApp.pairingRequest.home.title">Pairing Requests</span>
         <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-pairing-request" [routerLink]="['/pairing-request/new']">
             <fa-icon [icon]="'plus'"></fa-icon>
-            <span  jhiTranslate="assistantManagerApp.pairingRequest.home.createLabel">
+            <span  jhiTranslate="plantyAssistantManagerApp.pairingRequest.home.createLabel">
             Create new Pairing Request
             </span>
         </button>
@@ -15,11 +15,11 @@
             <thead>
             <tr>
             <th><span jhiTranslate="global.field.id">ID</span></th>
-            <th><span jhiTranslate="assistantManagerApp.pairingRequest.name">Name</span></th>
-            <th><span jhiTranslate="assistantManagerApp.pairingRequest.verificationCode">Verification Code</span></th>
-            <th><span jhiTranslate="assistantManagerApp.pairingRequest.requestTime">Request Time</span></th>
-            <th><span jhiTranslate="assistantManagerApp.pairingRequest.accepted">Accepted</span></th>
-            <th><span jhiTranslate="assistantManagerApp.pairingRequest.publicKey">Public Key</span></th>
+            <th><span jhiTranslate="plantyAssistantManagerApp.pairingRequest.name">Name</span></th>
+            <th><span jhiTranslate="plantyAssistantManagerApp.pairingRequest.verificationCode">Verification Code</span></th>
+            <th><span jhiTranslate="plantyAssistantManagerApp.pairingRequest.requestTime">Request Time</span></th>
+            <th><span jhiTranslate="plantyAssistantManagerApp.pairingRequest.accepted">Accepted</span></th>
+            <th><span jhiTranslate="plantyAssistantManagerApp.pairingRequest.publicKey">Public Key</span></th>
             <th></th>
             </tr>
             </thead>
