--- a/src/main/webapp/app/entities/agent/agent-delete-dialog.component.html
+++ b/src/main/webapp/app/entities/agent/agent-delete-dialog.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
-        <p jhiTranslate="assistantManagerApp.agent.delete.question" translateValues="{id: '{{agent.id}}'}">Are you sure you want to delete this Agent?</p>
+        <p jhiTranslate="plantyAssistantManagerApp.agent.delete.question" translateValues="{id: '{{agent.id}}'}">Are you sure you want to delete this Agent?</p>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="clear()">
