--- a/src/main/webapp/app/entities/agent/agent-detail.component.html
+++ b/src/main/webapp/app/entities/agent/agent-detail.component.html
@@ -1,17 +1,21 @@
 <div class="row justify-content-center">
     <div class="col-8">
         <div *ngIf="agent">
-            <h2><span jhiTranslate="assistantManagerApp.agent.detail.title">Agent</span> {{agent.id}}</h2>
+            <h2><span jhiTranslate="plantyAssistantManagerApp.agent.detail.title">Agent</span> {{agent.id}}</h2>
             <hr>
             <jhi-alert-error></jhi-alert-error>
             <dl class="row-md jh-entity-details">
-                <dt><span jhiTranslate="assistantManagerApp.agent.name">Name</span></dt>
+                <dt><span jhiTranslate="plantyAssistantManagerApp.agent.name">Name</span></dt>
                 <dd>
                     <span>{{agent.name}}</span>
                 </dd>
-                <dt><span jhiTranslate="assistantManagerApp.agent.publicKey">Public Key</span></dt>
+                <dt><span jhiTranslate="plantyAssistantManagerApp.agent.publicKey">Public Key</span></dt>
                 <dd>
                     <span>{{agent.publicKey}}</span>
+                </dd>
+                <dt><span jhiTranslate="plantyAssistantManagerApp.agent.sessionId">Session Id</span></dt>
+                <dd>
+                    <span>{{agent.sessionId}}</span>
                 </dd>
             </dl>
 
