--- a/src/main/webapp/app/entities/agent/agent-update.component.html
+++ b/src/main/webapp/app/entities/agent/agent-update.component.html
@@ -1,7 +1,7 @@
 <div class="row justify-content-center">
     <div class="col-8">
         <form name="editForm" role="form" novalidate (ngSubmit)="save()" #editForm="ngForm">
-            <h2 id="jhi-agent-heading" jhiTranslate="assistantManagerApp.agent.home.createOrEditLabel">Create or edit a Agent</h2>
+            <h2 id="jhi-agent-heading" jhiTranslate="plantyAssistantManagerApp.agent.home.createOrEditLabel">Create or edit a Agent</h2>
             <div>
                 <jhi-alert-error></jhi-alert-error>
                 <div class="form-group" [hidden]="!agent.id">
@@ -10,14 +10,19 @@
                         [(ngModel)]="agent.id" readonly />
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="assistantManagerApp.agent.name" for="field_name">Name</label>
+                    <label class="form-control-label" jhiTranslate="plantyAssistantManagerApp.agent.name" for="field_name">Name</label>
                     <input type="text" class="form-control" name="name" id="field_name"
                         [(ngModel)]="agent.name" />
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="assistantManagerApp.agent.publicKey" for="field_publicKey">Public Key</label>
+                    <label class="form-control-label" jhiTranslate="plantyAssistantManagerApp.agent.publicKey" for="field_publicKey">Public Key</label>
                     <input type="text" class="form-control" name="publicKey" id="field_publicKey"
                         [(ngModel)]="agent.publicKey" />
+                </div>
+                <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="plantyAssistantManagerApp.agent.sessionId" for="field_sessionId">Session Id</label>
+                    <input type="text" class="form-control" name="sessionId" id="field_sessionId"
+                        [(ngModel)]="agent.sessionId" />
                 </div>
 
             </div>
