--- a/src/main/webapp/app/entities/pairing-request/pairing-request-delete-dialog.component.html
+++ b/src/main/webapp/app/entities/pairing-request/pairing-request-delete-dialog.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
-        <p jhiTranslate="assistantManagerApp.pairingRequest.delete.question" translateValues="{id: '{{pairingRequest.id}}'}">Are you sure you want to delete this Pairing Request?</p>
+        <p jhiTranslate="plantyAssistantManagerApp.pairingRequest.delete.question" translateValues="{id: '{{pairingRequest.id}}'}">Are you sure you want to delete this Pairing Request?</p>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="clear()">
