--- a/src/main/webapp/app/entities/pairing-request/pairing-request-detail.component.html
+++ b/src/main/webapp/app/entities/pairing-request/pairing-request-detail.component.html
@@ -1,27 +1,27 @@
 <div class="row justify-content-center">
     <div class="col-8">
         <div *ngIf="pairingRequest">
-            <h2><span jhiTranslate="assistantManagerApp.pairingRequest.detail.title">Pairing Request</span> {{pairingRequest.id}}</h2>
+            <h2><span jhiTranslate="plantyAssistantManagerApp.pairingRequest.detail.title">Pairing Request</span> {{pairingRequest.id}}</h2>
             <hr>
             <jhi-alert-error></jhi-alert-error>
             <dl class="row-md jh-entity-details">
-                <dt><span jhiTranslate="assistantManagerApp.pairingRequest.name">Name</span></dt>
+                <dt><span jhiTranslate="plantyAssistantManagerApp.pairingRequest.name">Name</span></dt>
                 <dd>
                     <span>{{pairingRequest.name}}</span>
                 </dd>
-                <dt><span jhiTranslate="assistantManagerApp.pairingRequest.verificationCode">Verification Code</span></dt>
+                <dt><span jhiTranslate="plantyAssistantManagerApp.pairingRequest.verificationCode">Verification Code</span></dt>
                 <dd>
                     <span>{{pairingRequest.verificationCode}}</span>
                 </dd>
-                <dt><span jhiTranslate="assistantManagerApp.pairingRequest.requestTime">Request Time</span></dt>
+                <dt><span jhiTranslate="plantyAssistantManagerApp.pairingRequest.requestTime">Request Time</span></dt>
                 <dd>
                     <span>{{pairingRequest.requestTime}}</span>
                 </dd>
-                <dt><span jhiTranslate="assistantManagerApp.pairingRequest.accepted">Accepted</span></dt>
+                <dt><span jhiTranslate="plantyAssistantManagerApp.pairingRequest.accepted">Accepted</span></dt>
                 <dd>
                     <span>{{pairingRequest.accepted}}</span>
                 </dd>
-                <dt><span jhiTranslate="assistantManagerApp.pairingRequest.publicKey">Public Key</span></dt>
+                <dt><span jhiTranslate="plantyAssistantManagerApp.pairingRequest.publicKey">Public Key</span></dt>
                 <dd>
                     <span>{{pairingRequest.publicKey}}</span>
                 </dd>
