Implementing point-to-point messaging

--- a/src/main/webapp/app/entities/agent/agent-detail.component.html
+++ b/src/main/webapp/app/entities/agent/agent-detail.component.html
@@ -17,6 +17,10 @@
                 <dd>
                     <span>{{agent.sessionId}}</span>
                 </dd>
+                <dt><span jhiTranslate="plantyAssistantManagerApp.agent.user">User</span></dt>
+                <dd>
+                    {{agent.userLogin}}
+                </dd>
             </dl>
 
             <button type="submit"
