--- a/src/main/webapp/app/entities/agent/agent.component.html
+++ b/src/main/webapp/app/entities/agent/agent.component.html
@@ -18,6 +18,7 @@
             <th><span jhiTranslate="plantyAssistantManagerApp.agent.name">Name</span></th>
             <th><span jhiTranslate="plantyAssistantManagerApp.agent.publicKey">Public Key</span></th>
             <th><span jhiTranslate="plantyAssistantManagerApp.agent.sessionId">Session Id</span></th>
+            <th><span jhiTranslate="plantyAssistantManagerApp.agent.user">User</span></th>
             <th></th>
             </tr>
             </thead>
@@ -27,6 +28,9 @@
                 <td>{{agent.name}}</td>
                 <td>{{agent.publicKey}}</td>
                 <td>{{agent.sessionId}}</td>
+                <td>
+                    {{agent.userLogin}}
+                </td>
                 <td class="text-right">
                     <div class="btn-group flex-btn-group-container">
                         <button type="submit"
