--- a/src/main/webapp/app/entities/pairing-request/pairing-request-detail.component.html
+++ b/src/main/webapp/app/entities/pairing-request/pairing-request-detail.component.html
@@ -29,6 +29,10 @@
                 <dd>
                     <span>{{pairingRequest.publicKey}}</span>
                 </dd>
+                <dt><span jhiTranslate="plantyAssistantManagerApp.pairingRequest.login">Login</span></dt>
+                <dd>
+                    <span>{{pairingRequest.login}}</span>
+                </dd>
             </dl>
 
             <button type="submit"
