--- a/src/main/webapp/app/entities/pairing-request/pairing-request-update.component.html
+++ b/src/main/webapp/app/entities/pairing-request/pairing-request-update.component.html
@@ -41,6 +41,11 @@
                     <input type="text" class="form-control" name="publicKey" id="field_publicKey"
                         [(ngModel)]="pairingRequest.publicKey" />
                 </div>
+                <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="plantyAssistantManagerApp.pairingRequest.login" for="field_login">Login</label>
+                    <input type="text" class="form-control" name="login" id="field_login"
+                        [(ngModel)]="pairingRequest.login" />
+                </div>
 
             </div>
             <div>
