--- a/src/main/webapp/app/entities/pairing-request/pairing-request.component.html
+++ b/src/main/webapp/app/entities/pairing-request/pairing-request.component.html
@@ -21,6 +21,7 @@
             <th><span jhiTranslate="plantyAssistantManagerApp.pairingRequest.accepted">Accepted</span></th>
             <th><span jhiTranslate="plantyAssistantManagerApp.pairingRequest.sessionId">Session Id</span></th>
             <th><span jhiTranslate="plantyAssistantManagerApp.pairingRequest.publicKey">Public Key</span></th>
+            <th><span jhiTranslate="plantyAssistantManagerApp.pairingRequest.login">Login</span></th>
             <th></th>
             </tr>
             </thead>
@@ -33,6 +34,7 @@
                 <td>{{pairingRequest.accepted}}</td>
                 <td>{{pairingRequest.sessionId}}</td>
                 <td>{{pairingRequest.publicKey}}</td>
+                <td>{{pairingRequest.login}}</td>
                 <td class="text-right">
                     <div class="btn-group flex-btn-group-container">
                         <button type="submit"
