--- a/src/main/webapp/app/entities/skill/skill.component.html
+++ b/src/main/webapp/app/entities/skill/skill.component.html
@@ -25,8 +25,8 @@
                 <td><a [routerLink]="['/skill', skill.id, 'view' ]">{{skill.id}}</a></td>
                 <td>{{skill.name}}</td>
                 <td>
-                    <span *ngFor="let users of skill.users; let last = last">
-                            {{users.login}}{{last ? '' : ', '}}
+                    <span *ngFor="let user of skill.users; let last = last">
+                            {{user.login}}{{last ? '' : ', '}}
                         </span>
                 </td>
                 <td class="text-right">
