--- a/src/main/webapp/app/home/home.scss
+++ b/src/main/webapp/app/home/home.scss
@@ -20,7 +20,9 @@ Main page styles
     only screen and (min-resolution: 192dpi),
     only screen and (min-resolution: 2dppx) {
     .hipster {
-        background: url('../../content/images/hipster2x.png') no-repeat center top;
+        // Changed by Hadi
+        //background: url('../../content/images/hipster2x.png') no-repeat center top;
+        background: url('../../content/images/planty.png') no-repeat center top;
         background-size: contain;
     }
 }
