--- a/src/main/webapp/app/home/home.scss
+++ b/src/main/webapp/app/home/home.scss
@@ -5,9 +5,10 @@ Main page styles
 .hipster {
     display: inline-block;
     width: 347px;
-    height: 497px;
     // Changed by Hadi
+    //height: 497px;
     // background: url('../../content/images/hipster.png') no-repeat center top;
+    height: 347px;
     background: url('../../content/images/planty.png') no-repeat center top;
     background-size: contain;
 }
