Minor styling update

--- a/src/main/webapp/app/layouts/navbar/navbar.scss
+++ b/src/main/webapp/app/layouts/navbar/navbar.scss
@@ -87,7 +87,7 @@ Logo styles
     only screen and (min-resolution: 2dppx) {
     .navbar-brand {
         &.logo {
-            padding: 5x 0px;
+            padding: 5px 0px;
         }
     }
 }
