--- a/src/main/webapp/app/entities/skill/skill-update.component.html
+++ b/src/main/webapp/app/entities/skill/skill-update.component.html
@@ -14,6 +14,11 @@
                     <input type="text" class="form-control" name="name" id="field_name"
                         [(ngModel)]="skill.name" />
                 </div>
+                <div class="form-group">
+                    <label class="form-control-label" jhiTranslate="plantyAssistantManagerApp.skill.agentSharing" for="field_agentSharing">Agent Sharing</label>
+                    <input type="checkbox" class="form-control" name="agentSharing" id="field_agentSharing"
+                        [(ngModel)]="skill.agentSharing" />
+                </div>
 
                 <div class="form-group">
                     <label jhiTranslate="plantyAssistantManagerApp.skill.users" for="field_users">Users</label>
